tests/error/poly_errors/return_mismatch.err
Error: Type mismatch (at $FILE:13:14)
   | 
11 | @guppy
12 | def main() -> None:
13 |     x: bool = foo()
   |               ^^^^^ Expected expression of type `bool`, got `(?T, ?T)`

Guppy compilation failed due to 1 previous error
